styles/layers.scss
@layer base {
  :root {
    --transition-duration: 0.2s;
  }

  section.scheduler * {
    @apply box-content
    [&_div.calendar-event]:box-border
    [&_div.css-1w6ojv3]:z-[1001]
    [&_div.css-1nmp99l]:z-[1002]
    [&_div.css-anhyye]:z-[1002]
    [&_div.css-xkctyi]:z-[1003]
    [&_div.css-1d1h06e]:grid-cols-custom-17-1
    [&_div.css-1gyej37]:grid-cols-custom-17-1
    [&_div.css-ess3ih]:grid-cols-custom-10-7
    [&_div.css-s6u7kg]:grid-cols-custom-10-7
    [&.css-yp0i15-MuiPaper-root]:w-full
    [&_div.css-19s31ak]:z-[1000]
    [&_.css-73xuqe_.tabs_button.MuiTab-root]:w-[15rem]
    [&_.css-73xuqe_.tabs_button.MuiTab-root>div]:w-full;

    & div > span.rs__cell.rs__header.rs__time {
      writing-mode: unset;
    }

    & .css-1d1h06e .rs__cell:not(.rs__time) {
      min-width: unset;
    }

    & .rs__cell.rs__header > :first-of-type {
      padding: 0 !important;
    }

    & .rs__cell > button {
      @apply box-border;
    }
  }

  html {
    @apply h-full;
  }

  body {
    font-family: var(--font-family);
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;

    @apply mr-0 p-0 min-h-full
    bg-[var(--surface-ground)] 
    text-[var(--text-color)]
    [&_.p-inputtext]:py-[0.35rem]
    [&_.p-button.p-button-icon-only]:py-[0.35rem]
    [&_.p-dropdown-panel]:text-[0.8rem]
    [&_.p-inputtext]:text-[0.8rem]
    [&_.p-inputtextarea]:text-[0.8rem]
    [&_.p-dropdown-filter-container_input]:text-[0.8rem]
    [&_.p-dropdown-filter-container_input]:px-[0.8rem]
    [&_.p-dropdown-filter-container_input]:py-[0.4rem]
    [&_.p-dropdown-filter-container_svg]:w-[0.8rem]
    [&_.p-multiselect-filter-container_svg]:w-[0.8rem]
    [&_.p-multiselect]:text-[0.8rem]
    [&_.p-inputnumber-input]:text-[0.8rem]
    [&_.p-multiselect-panel]:text-[0.8rem]
    [&_.p-multiselect-panel_.p-multiselect-items]:text-[0.8rem]
    [&_.p-multiselect-panel_.p-multiselect-header]:py-[0.4rem]
    [&_.p-multiselect-panel_.p-multiselect-header]:pr-[0.4rem]
    [&_.p-column-filter-overlay-menu_.p-column-filter-buttonbar]:pt-0
    [&_.p-column-filter-buttonbar_button]:bg-defaultBlue
    [&_[type='submit']]:bg-defaultBlue
    [&_.p-multiselect-filter]:text-[0.8rem]
    [&_.p-inputwrapper]:w-full
    [&_.p-autocomplete-input]:w-full
    [&_.p-card-body]:w-full
    [&_.p-card-body]:text-[0.8rem]
    [&_.p-card-body_i]:text-[0.8rem]
    [&_.p-card-body_input]:text-[0.8rem]
    [&_.p-dropdown-label.p-inputtext]:text-[0.8rem]
    [&_.p-calendar_button]:text-[0.8rem]
    [&_.p-calendar_button_svg]:w-[0.8rem]
    [&_.p-dropdown-trigger_svg]:w-[0.8rem]
    [&_.p-multiselect-trigger_svg]:w-[0.8rem]
    [&_.p-multiselect-close_svg]:w-[0.8rem]
    [&_.p-inputswitch]:w-[2.9rem]
    [&_.p-inputswitch]:h-[1.35rem]
    [&_.p-inputswitch_.p-inputswitch-slider]:rounded-[2rem]
    [&_.p-inputswitch_.p-inputswitch-slider:before]:rounded-[2rem]
    [&_.p-inputswitch_.p-inputswitch-slider:before]:w-[0.9rem]
    [&_.p-inputswitch_.p-inputswitch-slider:before]:h-[0.9rem]
    [&_.p-inputswitch_.p-inputswitch-slider:before]:mt-[-0.45rem]
    [&_.css-12rl710-MuiPaper-root-MuiDialog-paper]:bg-transparent
    [&_.css-m9glnp-MuiPaper-root-MuiDialog-paper]:bg-transparent
    [&_.css-zw3mfo-MuiModal-root-MuiDialog-root]:z-[999]
    [&_.p-confirm-dialog]:md:w-fit
    [&_.p-confirm-dialog]:w-[90%]
    [&_.p-confirm-dialog_.p-dialog-footer_button]:md:w-auto
    [&_.p-confirm-dialog_.p-dialog-footer_button]:w-full
    [&_.p-toast]:max-w-[90%]
    [&_.p-toast]:sm:max-w-[25rem]
    [&_.pi]:text-[0.8rem];

    @apply [&_.p-input-icon-left_input]:pl-10
    [&_.p-input-icon-left>i]:mt-[-0.35rem]
    [&_.p-tabmenu-nav]:bg-white
    [&_.p-tabmenu-nav]:border-0
    [&_.p-menuitem-link]:border-0
    [&_.p-fieldset-legend]:py-2
    [&_.p-fieldset-legend_a]:py-3
    [&_.p-fieldset_.p-fieldset-content]:pt-[1rem]
    [&_.p-fieldset_.p-fieldset-content]:px-[0.75rem]
    [&_.p-fieldset_.p-fieldset-content]:pb-[0.3rem]
    [&_.p-checkbox-box]:w-[17px]
    [&_.p-checkbox-box]:h-[17px]
    [&_.p-checkbox]:items-center
    [&_.p-disabled]:opacity-80
    [&_.p-component]:disabled:opacity-80 #{!important};

    .p-float-label input:focus ~ label,
    .p-float-label input:-webkit-autofill ~ label,
    .p-float-label input.p-filled ~ label,
    .p-float-label textarea:focus ~ label,
    .p-float-label textarea.p-filled ~ label,
    .p-float-label .p-inputwrapper-focus ~ label,
    .p-float-label .p-inputwrapper-filled ~ label,
    .p-float-label .p-tooltip-target-wrapper ~ label {
      @apply px-[0.4rem] mt-[0.2rem] bg-white left-2 rounded-lg;
    }

    .p-float-label label {
      @apply leading-[1rem] text-sm;
    }

    fieldset {
      padding-inline-start: 0.75em;
      padding-inline-end: 0.75em;
    }
  }

  /* Cambiar el color del fondo de las barras de desplazamiento */
  ::-webkit-scrollbar {
    width: 8px;
    /* Ancho de la barra de desplazamiento vertical */
    height: 5px;
  }

  /* Cambiar el estilo del "pulgar" de la barra de desplazamiento */
  ::-webkit-scrollbar-thumb {
    background-color: rgb(66 125 141 / 1);
    /* Color del pulgar */
    border-radius: 2px;
    /* Borde redondeado del pulgar */
  }

  /* Cambiar el estilo del área de seguimiento de la barra de desplazamiento */
  ::-webkit-scrollbar-track {
    background-color: #f1f1f1;
    /* Color del área de seguimiento */
    border-radius: 2px;
    /* Borde redondeado del área de seguimiento */
  }

  a {
    @apply text-[var(--primary-color)] no-underline;
  }
  a:focus {
    box-shadow: none !important;
  }

  .layout-wrapper {
    @apply min-h-screen;
  }

  .p-multiselect .p-multiselect-label.p-placeholder,
  .p-multiselect .p-multiselect-label {
    @apply py-[0.35rem];
  }

  .custom-float-label {
    @apply absolute text-brandFieldColor left-[0.5rem] top-[-0.75rem] text-xs rounded-[0.5rem] px-[0.4rem] mt-[0.2rem] bg-white;
  }

  .p-float-label .p-inputwrapper-focus ~ label.images-tags,
  .p-float-label .p-inputwrapper-filled ~ label.images-tags {
    @apply top-[-0.95rem];
  }

  .custom-field-border {
    @apply border border-brandFieldBorder rounded-[4px] pt-[5.6px] pb-[3px] px-[12px] relative;
  }

  #nprogress {
    pointer-events: none;
  }
  #nprogress .bar {
    background: #29d;
    position: fixed;
    z-index: 1600;
    top: 0;
    left: 0;
    width: 100%;
    height: 3px;
  }
  #nprogress .peg {
    display: block;
    position: absolute;
    right: 0;
    width: 100px;
    height: 100%;
    opacity: 1;
    -webkit-transform: rotate(3deg) translate(0px, -4px);
    -ms-transform: rotate(3deg) translate(0px, -4px);
    transform: rotate(3deg) translate(0px, -4px);
    box-shadow:
      0 0 10px #29d,
      0 0 5px #29d;
  }
  #nprogress .spinner {
    display: block;
    position: fixed;
    z-index: 1600;
    top: 15px;
    right: 15px;
  }
  #nprogress .spinner-icon {
    width: 18px;
    height: 18px;
    box-sizing: border-box;
    border: 2px solid transparent;
    border-top-color: #29d;
    border-left-color: #29d;
    border-radius: 50%;
    -webkit-animation: nprogress-spinner 400ms linear infinite;
    animation: nprogress-spinner 400ms linear infinite;
  }
  .nprogress-custom-parent {
    overflow: hidden;
    position: relative;
  }
  .nprogress-custom-parent #nprogress .bar,
  .nprogress-custom-parent #nprogress .spinner {
    position: absolute;
  }
  @-webkit-keyframes nprogress-spinner {
    0% {
      -webkit-transform: rotate(0deg);
    }
    100% {
      -webkit-transform: rotate(360deg);
    }
  }
  @keyframes nprogress-spinner {
    0% {
      transform: rotate(0deg);
    }
    100% {
      transform: rotate(360deg);
    }
  }
}

@layer components {
  .focused {
    @apply shadow-md 
    transition-shadow 
    duration-[var(--transition-duration)] 
    outline-0 
    outline-offset-0;
  }

  .tooltip {
    @apply text-sm;
  }

  .event-tooltip {
    @apply text-xs;
  }

  .calendar-filters-container {
    @apply flex flex-col gap-2 sm:justify-center;
    @apply sm:flex-row #{!important};
  }
}

